Update project information in sonar-project.properties

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,8 @@
 # Información del proyecto
-sonar.projectKey=SGPaquetes
-sonar.projectName=SGPaquetes
+sonar.projectKey=deviscoutb
+sonar.projectName=DSTeam_DevTop
 sonar.projectVersion=1.0
-sonar.organization=sgpaquetes-org
+sonar.organization=https://www.utb.edu.co/
 
 # Ruta del código fuente
 sonar.sources=src
