--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,8 @@
 # Información del proyecto
-sonar.projectKey=deviscoutb
+sonar.projectKey=ISCODEVUTB_DSTeam_DevTopdeviscoutb
 sonar.projectName=DSTeam_DevTop
 sonar.projectVersion=1.0
-sonar.organization=https://www.utb.edu.co/
-
+sonar.organization=deviscoutb
 # Ruta del código fuente
 sonar.sources=src
 sonar.tests=tests
