--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,9 @@ jobs:
         run: pip install tox pytest pytest-cov
 
       - name: Run tests with coverage
-        run: pytest --cov=. --cov-report=xml
+        run: python -m pip install --upgrade pip
+             pip install -r requirements.txt 
+             pytest --cov=. --cov-report=xml
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v4
