--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,12 +21,11 @@ jobs:
           python-version: "3.12.4"  # Puedes cambiar la versión si es necesario
       
       - name: Install dependencies
-        run: pip install tox pytest pytest-cov
-
-      - name: Run tests with coverage
         run: python -m pip install --upgrade pip
              pip install -r requirements.txt 
-             pytest --cov=. --cov-report=xml
+
+      - name: Run tests with coverage
+        run: pytest --cov=. --cov-report=xml
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v4
