Fix Python version in GitHub workflow from 3.12.4 to 3.12 and improve dependency installation formatting

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,11 +18,12 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.12.4"  # Puedes cambiar la versión si es necesario
+          python-version: "3.12"  # Usa la versión correcta de Python
       
       - name: Install dependencies
-        run: python -m pip install --upgrade pip
-             pip install -r requirements.txt 
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Run tests with coverage
         run: pytest --cov=. --cov-report=xml
@@ -37,4 +38,3 @@ jobs:
             -Dsonar.projectKey=ISCODEVUTB_DSTeam_DevTopdeviscoutb
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.python.coverage.reportPaths=coverage.xml
-
