--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,15 +18,23 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.12"  # Usa la versión correcta de Python
-      
+          python-version: "3.12"
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Clean pytest cache
+        run: |
+          find . -type d -name "__pycache__" -exec rm -rf {} +
+          rm -rf .pytest_cache
+
+      - name: Ensure tests directory is a package
+        run: touch tests/__init__.py
+
       - name: Run tests with coverage
-        run: pytest --cov=. --cov-report=xml
+        run: pytest tests --cov=. --cov-report=xml
 
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@v4
